[tool.poetry]
name = "minllama-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "4.66.1"
requests = "2.31.0"
importlib-metadata = "3.7.0"
filelock = "3.0.12"
scikit-learn = "1.2.2"
numpy = "1.26.3"
tokenizers = "0.13.3"
sentencepiece = "0.1.99"
torch = "2.1.2"
torchvision = "0.16.2"
torchaudio = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
